--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,36 @@
 = Touches
 
-This project rocks and uses MIT-LICENSE.
+has_many through relations do not update timestamps. Touches is to be used to update cached content in some m:n parent:child relationship.
+
+In the example above a category would not update if a contained product updates e.g. its name.
+
+touches enables bidirectional update of timestamps.
+
+For new entries to touch the parent, you have to insert touch: true into the join-model!!
+
+
+
+
+= Example
+
+class Category < ActiveRecord::Base
+  has_many :products_categories
+  has_many :products, through: :products_categories
+
+  touches :products
+end
+
+class Product < ActiveRecord::Base
+  has_many :products_categories
+  has_many :categories, through: :products_categories
+
+  touches :categories
+end
+
+class ProductsCategory < ActiveRecord::Base
+  belongs_to :product, touch: true
+  belongs_to :category, touch: true
+end
+
+
+
